--- a/_post/post-1.html
+++ b/_post/post-1.html
@@ -1,1 +1,11 @@
+---
+title: "Teaching experience 1"
+collection: post
+type: "blog-post"
+permalink: /post/post-1
+date: 2020-05-04
+location: "City, Country"
+---
+
+Hello world.
 
