--- a/_pages/post.html
+++ b/_pages/post.html
@@ -5,6 +5,6 @@ permalink: /post/
 author_profile: true
 ---
 
-{% for post in site.talks reversed %}
-  {% include archive-single-talk.html %}
+{% for post in site.post reversed %}
+  {% include archive-single-post.html %}
 {% endfor %}
