--- a/_pages/post.html
+++ b/_pages/post.html
@@ -6,5 +6,5 @@ author_profile: true
 ---
 
 {% for post in site.post reversed %}
-  {% include archive-single-post.html %}
+  {% include archive-single.html %}
 {% endfor %}
