--- a/_pages/post.html
+++ b/_pages/post.html
@@ -5,6 +5,13 @@ permalink: /post/
 author_profile: true
 ---
 
+
+{% if site.talkmap_link == true %}
+
+<p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>
+
+{% endif %}
+
 {% for post in site.post reversed %}
   {% include archive-single.html %}
 {% endfor %}
