--- a/_pages/post.html
+++ b/_pages/post.html
@@ -13,5 +13,5 @@ author_profile: true
 {% endif %}
 
 {% for post in site.post reversed %}
-  {% include archive-single.html %}
+  {% include archive-single-cv.html %}
 {% endfor %}
